Add fix translator to pt-BR language

--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -1,20 +1,20 @@
 en:
   simple_form:
-    "yes": 'Yes'
-    "no": 'No'
+    "yes": 'Sim'
+    "no": 'Não'
     required:
-      text: 'required'
+      text: 'obrigatório'
       mark: '*'
       # You can uncomment the line below if you need to overwrite the whole required html.
       # When using html, text and mark won't be used.
       # html: '<abbr title="required">*</abbr>'
     error_notification:
-      default_message: "Please review the problems below:"
+      default_message: "Por favor, veja os seguintes erros abaixo:"
     # Examples
     # labels:
-    #   defaults:
-    #     password: 'Password'
-    #   user:
+      #  defaults:
+      #    password: 'Password'
+      #  user:
     #     new:
     #       email: 'E-mail to sign in.'
     #     edit:
