--- a/config/locales/devise.pt-BR.yml
+++ b/config/locales/devise.pt-BR.yml
@@ -7,20 +7,23 @@
 
 pt-BR:
   devise:
+    failure:
+      user:
+        already_authenticated: "Você já está logado."
+        inactive: "Sua conta ainda não foi ativada."
+        invalid: "%{authentication_keys} ou senha inválida."
+        locked: "Sua conta está bloqueada."
+        last_attempt: "Você tem mais uma tentativa antes de sua conta ser bloqueada."
+        not_found_in_database: "%{authentication_keys} ou senha inválida."
+        timeout: "Sua sessão expirou. Por favor, faça login novamente para continuar."
+        unauthenticated: "Você precisa entrar ou registrar-se antes de continuar."
+        unconfirmed: "Você precisa confirmar seu endereço de email antes de continuar."
+
     confirmations:
       confirmed: "Sua conta foi confirmada com sucesso."
       send_instructions: "Você receberá um email com instruções para confirmar sua conta em alguns minutos."
       send_paranoid_instructions: "Se seu endereço de email existir em nosso banco de dados, você receberá um email com instruções para confirmar sua conta em alguns minutos."
-    failure:
-      already_authenticated: "Você já está logado."
-      inactive: "Sua conta ainda não foi ativada."
-      invalid: "%{authentication_keys} ou senha inválida."
-      locked: "Sua conta está bloqueada."
-      last_attempt: "Você tem mais uma tentativa antes de sua conta ser bloqueada."
-      not_found_in_database: "%{authentication_keys} ou senha inválida."
-      timeout: "Sua sessão expirou. Por favor, faça login novamente para continuar."
-      unauthenticated: "Você precisa entrar ou registrar-se antes de continuar."
-      unconfirmed: "Você precisa confirmar seu endereço de email antes de continuar."
+
     mailer:
       confirmation_instructions:
         subject: "Instruções de confirmação"
