--- a/config/locales/devise.views.pt-BR.yml
+++ b/config/locales/devise.views.pt-BR.yml
@@ -1,6 +1,17 @@
 pt-BR:
   activerecord:
-    attributes:
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              taken: "já existe em nosso banco de dados"
+              blank: "não pode ficar em branco"
+            password:
+              blank: "não pode ficar em branco"
+            password_confirmation:
+              confirmation: não confere com a senha de baixo
+
       user:
         confirmation_sent_at: Confirmação enviada em
         confirmation_token: Token de confirmação
@@ -37,10 +48,10 @@ pt-BR:
     failure:
       already_authenticated: Você já está autenticado.
       inactive: A sua conta ainda não foi ativada.
-      invalid: 
+      invalid:
       last_attempt: Você tem mais uma única tentativa antes de sua conta ser bloqueada.
       locked: A sua conta está bloqueada.
-      not_found_in_database: 
+      not_found_in_database:
       timeout: A sua sessão expirou, por favor, faça login novamente para continuar.
       unauthenticated: Para continuar, faça login ou registre-se.
       unconfirmed: Antes de continuar, confirme a sua conta.
